--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,5 +6,7 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout@v4.1.5
+      - name: Install deps
+        run: npm ci
       - name: Lint
         run: npm run lint
