--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,8 +5,19 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
-        uses: actions/checkout@v4.1.5
+        uses: actions/checkout@v3
       - name: Install deps
         run: npm ci
       - name: Lint
         run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v4.1.5
+      - name: Install deps
+        run: npm ci
+      - name: Test
+        run: npm run test
+  
+    
